# tapio-build-tooling

./: README.md  SECURITY.md  build-tooling.toml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml  supply-chain.yml
actions/node-supply-chain/: action.yml
actions/python-release-evidence/: action.yml
actions/python-supply-chain/: action.yml
examples/: README.md  rqp-configurator.toml  tapio-analysis.toml
src/tapio_build_tools/: __init__.py  __main__.py  cli.py  config.py  cyclonedx.py  evidence.py
src/tapio_build_tools/ecosystems/: __init__.py
src/tapio_build_tools/ecosystems/node/: __init__.py  audit.py  sbom.py
src/tapio_build_tools/ecosystems/python/: __init__.py  audit.py  requirements.py  sbom.py
tests/: __init__.py  test_actions.py  test_audit.py  test_cli.py  test_config.py  test_examples.py  test_node_audit.py  test_node_sbom.py  test_requirements.py  test_sbom.py
